{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 14,
  "lineage": "2532d621-14a6-dabc-3ff7-c49ef8c5d1c2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SubnetInstance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:938214331347:instance/i-0d4a13906a64a9870",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d4a13906a64a9870",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-026d19f4ec731cf6a",
            "private_dns": "ip-10-0-1-233.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.233",
            "public_ip": "54.172.194.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d4f60d84bd6695a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06084e8c89728d95d",
            "tags": {
              "Name": "Ubuntu 1"
            },
            "tags_all": {
              "Name": "Ubuntu 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063bb0ffca2a90e54"
            ]
          },
          "dependencies": [
            "aws_security_group.ExamSecurityGroup",
            "aws_subnet.my_subnet",
            "aws_vpc.exam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SubnetInstance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:938214331347:instance/i-064bd92892fc08bc7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064bd92892fc08bc7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0614b3a32c8a73579",
            "private_dns": "ip-10-0-2-42.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.42",
            "public_ip": "54.163.11.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-016d2e54c46317dbe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b095143d5ed02b7f",
            "tags": {
              "Name": "Ubuntu 2"
            },
            "tags_all": {
              "Name": "Ubuntu 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063bb0ffca2a90e54"
            ]
          },
          "dependencies": [
            "aws_security_group.ExamSecurityGroup",
            "aws_subnet.my_subnet",
            "aws_vpc.exam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetGate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938214331347:internet-gateway/igw-09d573bdf142749e4",
            "id": "igw-09d573bdf142749e4",
            "owner_id": "938214331347",
            "tags": {
              "Name": "internet Gateway"
            },
            "tags_all": {
              "Name": "internet Gateway"
            },
            "vpc_id": "vpc-07a6479011c6f261d"
          },
          "dependencies": [
            "aws_vpc.exam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ExamRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09d573bdf142749e4",
            "id": "r-rtb-06d04bda2b45d6cf91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06d04bda2b45d6cf9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internetGate",
            "aws_route_table.Exam_route_table",
            "aws_vpc.exam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Exam_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938214331347:route-table/rtb-06d04bda2b45d6cf9",
            "id": "rtb-06d04bda2b45d6cf9",
            "owner_id": "938214331347",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "MyRouteTable"
            },
            "tags_all": {
              "Name": "MyRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a6479011c6f261d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.exam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ExamAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d3b4f445fc3ed31",
            "route_table_id": "rtb-06d04bda2b45d6cf9",
            "subnet_id": "subnet-06084e8c89728d95d"
          },
          "dependencies": [
            "aws_route_table.Exam_route_table",
            "aws_subnet.my_subnet",
            "aws_vpc.exam_vpc"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be24fb38f454d464",
            "route_table_id": "rtb-06d04bda2b45d6cf9",
            "subnet_id": "subnet-0b095143d5ed02b7f"
          },
          "dependencies": [
            "aws_route_table.Exam_route_table",
            "aws_subnet.my_subnet",
            "aws_vpc.exam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ExamSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938214331347:security-group/sg-063bb0ffca2a90e54",
            "description": "security group for the ec2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063bb0ffca2a90e54",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ExamSecurityGroup",
            "name_prefix": "",
            "owner_id": "938214331347",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Exam security Group"
            },
            "tags_all": {
              "Name": "Exam security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a6479011c6f261d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.exam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938214331347:subnet/subnet-06084e8c89728d95d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06084e8c89728d95d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938214331347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform subnet subnet1"
            },
            "tags_all": {
              "Name": "terraform subnet subnet1"
            },
            "vpc_id": "vpc-07a6479011c6f261d"
          },
          "dependencies": [
            "aws_vpc.exam_vpc"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938214331347:subnet/subnet-0b095143d5ed02b7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b095143d5ed02b7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938214331347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform subnet subnet2"
            },
            "tags_all": {
              "Name": "terraform subnet subnet2"
            },
            "vpc_id": "vpc-07a6479011c6f261d"
          },
          "dependencies": [
            "aws_vpc.exam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "exam_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938214331347:vpc/vpc-07a6479011c6f261d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d7b9da53053702d4",
            "default_route_table_id": "rtb-03b4bdee97807d3b0",
            "default_security_group_id": "sg-0530749c3eb573054",
            "dhcp_options_id": "dopt-00a99b7c32a43a5d2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a6479011c6f261d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03b4bdee97807d3b0",
            "owner_id": "938214331347",
            "tags": {
              "Name": "retakeExam"
            },
            "tags_all": {
              "Name": "retakeExam"
            }
          }
        }
      ]
    }
  ]
}